samples/_failures_safe/1761338607_25b246_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6f13def0.c:156: error: expected ‘;’, ‘,’ or ‘)’ at end of input
